<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/form"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/info"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/info_desc"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/nik"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/nikTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/enter_nik"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/name"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/nameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/birth_date"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/birthDateTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/enter_birth_date"
                android:inputType="date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/sex"
                android:textSize="12sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genderGroup"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/relation"
                android:textSize="12sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relationGroup"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButtonParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parent" />

                <RadioButton
                    android:id="@+id/radioButtonPartner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/partner" />

                <RadioButton
                    android:id="@+id/radioButtonChild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/child" />

                <RadioButton
                    android:id="@+id/radioButtonOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_marginTop="24dp"/>

        </LinearLayout>

    </ScrollView>

</layout>