<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/validate_your_data"
                    android:textSize="20sp"
                    android:layout_marginBottom="24dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/nik"
                    android:textSize="12sp" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:id="@+id/nikTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/nik"
                    android:textSize="14sp" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/name"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/nameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/name"
                    android:textSize="14sp" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/birth_date"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/birthDateTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/birth_date"
                    android:textSize="14sp" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/sex"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/sexTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/birth_date"
                    android:textSize="14sp" />

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/relation"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/relationTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/relation"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/green_button"
                    android:textColor="@color/white"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/buttonChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:background="@drawable/white_button"/>

            </LinearLayout>

        </LinearLayout>

</layout>